# LLM-Serving-Kernel-Optimization

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
benchmarks/: ablation_study.py  baseline_comparison.py  bench_kernels.py  generate_figures.py
configs/: moe_4expert.yaml  moe_4expert_sglang.yaml
lightning_router/: __init__.py  cli.py  config.py
lightning_router/kernels/: __init__.py  expert_routing.py  quantized_matmul.py
lightning_router/models/: __init__.py  experts.py  gating.py  moe_layer.py
lightning_router/profiling/: __init__.py  benchmark_kernels.py  nsight_runner.py
lightning_router/quantization/: __init__.py  pack_weights.py  quantize_model.py
lightning_router/serving/: __init__.py  model_runner.py  server.py  sglang_backend.py  worker.py
tests/: __init__.py  test_expert_routing.py  test_moe_layer.py  test_quantization.py
